# langgraph_func

./: .buildinfo  .gitignore  README.md  __init__.py  config.py  logger.py  pyproject.toml  readme.md  settings.py
.doctrees/: 01-graph-structure.doctree  02-deployment.doctree  03-yaml-function-app.doctree  04-helper-functions.doctree  environment.pickle  index.doctree
.github/workflows/: release.yml
agentpkg/: __init__.py  blueprint_builder.py  docs_builder.py  docs_function.py  func_app_builder.py
agentpkg/config/: loader.py  models.py
agentpkg/func_app_builder/: blueprint_builder.py  create_app.py  func_app_builder.py
agentpkg/graph_endpoints/: graph_executor_factory.py  graph_executor_service.py  registry.py
agentpkg/graph_helpers/: call_subgraph.py  wrappers.py
agentpkg/graphs/vacancies/: vacancy_agent.py
docs/: 02-deployment.md  03-yaml-function-app.md  04-helper-functions.md  Makefile  example-function-app.yml
docs/source/: 02-deployment.md  03-yaml-function-app.md  conf.py  index.rst
docs/source/source/: 01-graph-structure.md  02-deployment.md  03-yaml-function-app.md  conf.py  index.rst
example/: function-app.yml  function_app.py
example/graphs/: config.py  parent_graph.py  settings.py
graphs/vacancies/education/: graph.py  prompts.py
graphs/vacancies/function_title/: graph.py
grapi/: __init__.py  config.py  docs_builder.py  settings.py
grapi/func_app_builder/: blueprint_builder.py  create_app.py  func_app_builder.py
grapi/graph_endpoints/: graph_executor_factory.py  graph_executor_service.py
grapi/graph_helpers/: call_subgraph.py  wrappers.py
grapi/yml_config/: loader.py
langgraph_api/: __init__.py  docs_builder.py  settings.py
langgraph_api/func_app_builder/: blueprint_builder.py  create_app.py  func_app_builder.py
langgraph_api/graph_endpoints/: graph_executor_factory.py  graph_executor_service.py
langgraph_api/graph_helpers/: call_subgraph.py  wrappers.py
langgraph_api/yml_config/: loader.py
langgraph_func/: readme.md
test/: function-app.yml  function_app.py  local.settings.json  requirements.txt
test/graphs/: graph.py  parent_graph.py  subgraph.py
(+4 files in other folders)
