[tool.poetry]
name = "langgraph_func"
version = "0.1.10"
description = "LangGraph Azure Function Agents"
authors = ["Example <example@example.com>"]
packages = [
    
    { include = "langgraph_func" }
]

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "*"
pydantic = "*"
openai-agents = "*"
langchain = "*"
langgraph = "*"
langchain_community = "*"
langchain-core = "*"
openapi-schema-pydantic = "*"
requests = "*"
dacite = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
myst-parser = "*"
toml = "*"