[tool.poetry]
name = "langgraph_func"
version = "0.2.4"
description = "LangGraph Azure Function Agents"
authors = ["job van Creij jobvancreij@gmail.com"]
packages = [
    { include = "langgraph_func" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
azure-functions = "*"
pydantic = "*"
openai-agents = "*"
langchain = "*"
langgraph = "*"
langchain_community = "*"
langchain-core = "*"
openapi-schema-pydantic = "*"
requests = "*"
dacite = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
sphinx = "*"
myst-parser = "*"
toml = "*"

[tool.poetry.urls]
Documentation = "https://your-org.github.io/langgraph-func/"